--- a/style.css
+++ b/style.css
@@ -7,26 +7,12 @@
     z-index: -1;
 }
 
-#canvas {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-}
-
 #modal {
-    background: #fff;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    z-index: 999;
+    margin: auto;
+    width: 960px;
+    height: 500px;
+    background-color: white;
+    z-index: 1;
 }
 
 #dropzone {
