--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 * {
-    font-family: Helvetica Neue, Segoe UI, Helvetica, arial, sans-serif;
+    font-family: Avenir, Helvetica Neue, Segoe UI, Helvetica, arial, sans-serif;
+}
+
+.pico-content {
     line-height: 1.2;
 }
 
